tests/compile-fail/suzu_from_on_variant.rs
use suzunari_error::suzunari_error;

#[suzunari_error]
enum MyError {
    #[suzu(from)]
    Variant {},
}

fn main() {}
